--- a/index.html
+++ b/index.html
@@ -1,7 +1,12 @@
+  </body>
+<html lang="en">
+</html>
+
 <!DOCTYPE html>
 <html>
 <head>
-  <title>Forrásoldal</title>
+  <title>Nyomtatás</title>
+  <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="stylesheet" href="css/bootstrap.min.css">
   <script src="js/bootstrap.min.js"></script>
